# camptrack

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/camptrack/: __main__.py  admin.py  auth.py  chat.py  cli.py  ui.py
src/camptrack/coordinator/: UI.py  camp_management.py  coord.py  coordinator_options.py  data.py  helper.py
src/camptrack/coordinator/utils/: location_input.py
src/camptrack/database/: __init__.py  camp_status.py  connection.py  db_utils.py  models.py  schema.sql
src/camptrack/dev/: README.md  __init__.py  cli.py
src/camptrack/leader/: activity_participation.py  camp_assignment.py  daily_log.py  dashboard.py  leader_menu.py  plot.py
src/camptrack/types/: cursor.py
src/camptrack/utils/: geocode.py  logging_config.py  pagination.py  security.py  session.py  terminal.py
src/camptrack/visualisations/: camp_visualisations.py  geo_support.py
src/camptrack/visualisations/charts/: charts.py  empty_plot.py  map_plot.py  tables.py
src/camptrack/visualisations/data/: activities.py  attendance.py  data.py  food_stock.py  utils.py
tests/: README.md  run.py
tests/database/: test_camp_status.py
